Fixed double scroll bar issue on windows, implemented overflow-y hidden for fix

--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -21,6 +21,7 @@ body {
   line-height: 1.5;
   background-color: $blue;
   -webkit-font-smoothing: antialiased;
+  overflow-y: hidden;
 }
 
 section {
